force-app/main/default/objects/DD_Group__c/DD_Group__c.object-meta.xml
<CustomObject>
    <label>Group</label>
    <nameField>
        <displayFormat>GRP-{000000}</displayFormat>
        <label>Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>