force-app/main/default/objects/DD_Group__c/fields/Billing_Day__c.field-meta.xml
<CustomField>
    <fullName>Billing_Day__c</fullName>
    <inlineHelpText>Day of month premiums are due (typically 1 or 15)</inlineHelpText>
    <label>Billing Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>