force-app/main/default/objects/DD_Group__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <inlineHelpText>How the group is billed for premiums</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List Bill</fullName>
                <default>true</default>
                <label>List Bill</label>
            </value>
            <value>
                <fullName>Self Bill</fullName>
                <label>Self-Bill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>