force-app/main/default/objects/DD_Group__c/fields/Days_Until_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Renewal__c</fullName>
    <formula>Renewal_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days until this group&apos;s renewal date</inlineHelpText>
    <label>Days Until Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>