force-app/main/default/objects/DD_Group__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Date coverage begins for this group</inlineHelpText>
    <label>Group Effective Date</label>
    <type>Date</type>
</CustomField>