force-app/main/default/objects/DD_Group__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Employer associated with this enrolled group</inlineHelpText>
    <label>Employer</label>
    <referenceTo>DD_Employer__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>