force-app/main/default/objects/DD_Group__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <inlineHelpText>Legal or DBA name of the group as it will appear on plan documents</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>