force-app/main/default/objects/DD_Group__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <inlineHelpText>Annual renewal date for this group (typically 12 months from effective date)</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>