force-app/main/default/objects/DD_Group__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <inlineHelpText>Standard Industrial Classification code for underwriting purposes</inlineHelpText>
    <label>SIC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>