force-app/main/default/objects/DD_Group__c/fields/Source_Quote__c.field-meta.xml
<CustomField>
    <fullName>Source_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Quote that was accepted and converted to this group</inlineHelpText>
    <label>Source Quote</label>
    <referenceTo>DD_Quote__c</referenceTo>
    <relationshipLabel>Converted Group</relationshipLabel>
    <relationshipName>Converted_Group</relationshipName>
    <type>Lookup</type>
</CustomField>