force-app/main/default/objects/DD_Group__c/fields/Total_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolled__c</fullName>
    <inlineHelpText>Current number of enrolled subscribers</inlineHelpText>
    <label>Total Enrolled</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>